Added a blog card partial and hooked it up to homePage.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,18 +15,17 @@
     {{!-- Bootstrap Navbar --}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">TechTime</a>
+            <a class="navbar-brand" href="#">TechTime Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/dashboard">Dashboard</a>
                     {{#if isLoggedIn}}
-                    <a class="nav-link disabled">Logout</a>
+                    <a class="nav-link" href="/api/signout">Logout</a>
                     {{/if}}
                 </div>
             </div>
