--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,8 @@
                     <a class="nav-link" href="/dashboard">Dashboard</a>
                     {{#if isLoggedIn}}
                     <a class="nav-link" href="/api/signout">Logout</a>
+                    {{else}}
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#login-modal">Login</a>
                     {{/if}}
                 </div>
             </div>
@@ -34,6 +36,43 @@
 
 
     {{{body}}}
+
+    {{!-- Login/Signup Modal --}}
+
+    <div class="modal modal-lg fade" id="login-modal" aria-hidden="true" aria-labelledby="login-modalLabel" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="login-modalLabel">Modal 1</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Show a second modal and hide this one with the button below.
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" data-bs-target="#signup-modal" data-bs-toggle="modal">Open
+                        second modal</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal modal-lg fade" id="signup-modal" aria-hidden="true" aria-labelledby="signup-modalLabel" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signup-modalLabel">Modal 2</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Hide this modal and show the first with the button below.
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" data-bs-target="#login-modal" data-bs-toggle="modal">Back to
+                        first</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Boostrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
