--- a/views/partials/blogCard.handlebars
+++ b/views/partials/blogCard.handlebars
@@ -1,9 +1,9 @@
-<div class="card">
+<div class="card mb-5">
     <div class="card-header">
-        {{blog.title}}
+       <h2>{{title}}</h2>
+       <p>Posted by {{user.username}} on {{toDate createdAt}}</p>
     </div>
     <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+        <p class="card-text">{{blog}}</p>
     </div>
 </div>
