--- a/views/partials/blogCard.handlebars
+++ b/views/partials/blogCard.handlebars
@@ -1,7 +1,7 @@
 <div class="card mb-5">
-    <div class="card-header">
+    <div class="card-header d-flex justify-content-between flex-wrap">
        <h2>{{title}}</h2>
-       <p>Posted by {{user.username}} on {{toDate createdAt}}</p>
+       <p class="align-self-end">Posted by {{user.username}} on {{toDate createdAt}}</p>
     </div>
     <div class="card-body">
         <p class="card-text">{{blog}}</p>
