Added a post page with routes to interact with a single post by id.

--- a/views/homePage.handlebars
+++ b/views/homePage.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     {{#if isLoggedIn}}
-    <h1>Welcome logged in user: {{loggedInUser.username}}</h1>
+    <h1>Welcome logged in user: {{user.username}}</h1>
     {{/if}}
 
     <h1 class="mt-5">Recent Blog Posts</h1>
