--- a/views/partials/blogCard.handlebars
+++ b/views/partials/blogCard.handlebars
@@ -1,9 +1,11 @@
-<div class="card mb-5">
-    <div class="card-header d-flex justify-content-between flex-wrap">
-       <h2>{{title}}</h2>
-       <p class="align-self-end">Posted by {{user.username}} on {{toDate createdAt}}</p>
+<a class="cardLink" href="/post/{{id}}">
+    <div class="card mb-5">
+        <div class="card-header d-flex justify-content-between flex-wrap">
+            <h2>{{title}}</h2>
+            <p class="align-self-end">Posted by {{user.username}} on {{toDate createdAt}}</p>
+        </div>
+        <div class="card-body">
+            <p class="card-text">{{blog}}</p>
+        </div>
     </div>
-    <div class="card-body">
-        <p class="card-text">{{blog}}</p>
-    </div>
-</div>
+</a>
