Added a modal to create a blog.  Started new Javascript to handle blog post.

--- a/views/homePage.handlebars
+++ b/views/homePage.handlebars
@@ -1,9 +1,16 @@
 <div class="container">
+
     {{#if isLoggedIn}}
-    <h1>Welcome logged in user: {{user.username}}</h1>
+    <div class="container rounded bg-secondary mt-5">
+
+        <h1 class="p-3">Welcome logged in user: {{user.username}}</h1>
+        <button class="p-2 m-3 btn btn-dark" data-bs-target="#postBlog-modal" data-bs-toggle="modal">Post Blog</button>
+
+    </div>
     {{/if}}
 
-    <h1 class="mt-5">Recent Blog Posts</h1>
+
+    <h3 class="mt-5">Recent Blog Posts</h3>
 
     {{#each blogPosts as | blog |}}
     {{> blogCard}}
