--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -142,6 +142,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="/assets/js/userLoginLogout.js"></script>
+    <script src="/assets/js/post.js"></script>
 </body>
 
 </html>
