--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,3 +1,28 @@
+{{!-- Card with form to add comment --}}
+{{#if isLoggedIn}}
+<div class="card">
+    <div class="card-header">
+        <h5 class="card-title">Add a Comment!</h5>
+    </div>
+    <div class="card-body">
+        <form>
+            <div class="mb-3 d-flex flex-column">
+                <label for="comment-input" class="form-label">Comment</label>
+                <textarea name="commentInput" id="comment-input" rows="6"></textarea>
+            </div>
+        </form>
+    </div>
+    <div class="card-footer">
+        <div class="modal-footer d-flex justify-content-between">
+            <button id="comment-btn" type="submit" class="btn btn-primary">Comment</button>
+        </div>
+    </div>
+</div>
+{{/if}}
+
+{{!-- Cards for Comments --}}
+{{#each comments as | comment |}}
+<div class="card">
     <div class="card-header">
         <h5 class="card-title">{{user.username}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Posted by {{user.username}} on {{toDate createdAt}}</h6>
@@ -5,3 +30,5 @@
     <div class="card-body">
         <p class="card-text">{{comment}}</p>
     </div>
+</div>
+{{/each}}
