Now can create a comment and it is saved to the database.  Wrote routes, and frontend JS.

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -14,7 +14,7 @@
     </div>
     <div class="card-footer">
         <div class="modal-footer d-flex justify-content-between">
-            <button id="comment-btn" type="submit" class="btn btn-primary">Comment</button>
+            <button id="comment-btn" data-blogid="{{blogPost.id}}" type="submit" class="btn btn-primary">Comment</button>
         </div>
     </div>
 </div>
