Added a handlebars condition HTML to instruct users to signin or signup if they haven't done so.

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -18,6 +18,17 @@
         </div>
     </div>
 </div>
+{{else}}
+<div class="card">
+  <div class="card-header">
+    Login or Signup to Participate
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">You're missing out!</h5>
+    <p class="card-text">Click the button below to login or sign up today.</p>
+    <a href="#" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#login-modal">Let's go!</a>
+  </div>
+</div>
 {{/if}}
 
 {{!-- Cards for Comments --}}
