--- a/views/partials/blogCard.handlebars
+++ b/views/partials/blogCard.handlebars
@@ -1,4 +1,4 @@
-<div class="card mb-5">
+<div class="card">
     <div class="card-header d-flex justify-content-between flex-wrap">
         <h2 id="currentTitle">{{title}}</h2>
         <p class="align-self-end">Posted by {{user.username}} on {{toDate createdAt}}</p>
